Fixed game history layout issue and other adjustments to CSS styles. Prevented solvable cells from being highlighted while creating a new game manually. Entered some more 'easy' and 'medium' games to the predetermined games.

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,5 +1,6 @@
 .grid-wrapper {
     position:relative;
+    margin:15px 0;
 }
 
 #grid {
@@ -10,7 +11,7 @@
     grid-template-rows: repeat(9, 1fr);
     grid-template-columns: repeat(9, 1fr);
     grid-auto-columns: row;
-    margin: 20px auto 0 auto;
+    margin: 0 auto;
 }
 
 .cell {
